# AI-Money-Agent

./: .env.exmple  .gitignore  README.md  main.py  nof1-prompt.md  pyproject.toml  run_24_7.sh  test_account_info.py  test_async_trade_data.py
Money_Agent/: __init__.py  config.py  database.py  doge_prompts.py  graph.py  model.py  prompt_formatter.py  prompts.py  schemas.py  state.py  workflow.py
Money_Agent/tools/: exchange.py  exchange_data_tool.py  exchange_order_tool.py  trade_history_analyzer.py
Money_Agent/utils/: market.py  market_regime.py  performance.py  prompt_formatter.py  trend_validation.py
common/: __init__.py  log_handler.py
server/: main.py
web/: README.md  app.js  index.html
